fluxcd/apps/main/monitoring/kube-prometheus-stack/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: modern-auth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: wildcard-fzymgc-house-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alerts.k8s.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: monitoring
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: wildcard-fzymgc-house-tls
